Closed Bug 1431917 Opened 8 years ago Closed 8 years ago

incorrect fprintf option in CHECK_COUNT static function

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: jeanluc.bonnafoux, Assigned: jeanluc.bonnafoux)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:57.0) Gecko/20100101 Firefox/57.0 Build ID: 20180103231032 Steps to reproduce: Static code analysis points out that CHECK_COUNT static function uses an incorrect option in fprintf statement. Actual results: variable has type uint32_t but fprintf uses %d option which is suited for signed integer. Since variable we want to print is not signed, option %u should be used. Expected results: Code should have used %u option in fprintf call.
Comment on attachment 8944169 [details] Bug 1431917 - incorrect fprintf option in CHECK_COUNT static function https://reviewboard.mozilla.org/r/214462/#review220106 Thanks!
Attachment #8944169 - Flags: review?(nfroyd) → review+
Pushed by nfroyd@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/dd4fa0135aad incorrect fprintf option in CHECK_COUNT static function r=froydnj
Keywords: checkin-needed
Already landed, see comment 3. :)
Assignee: nobody → jeanluc.bonnafoux
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: