Bug 1431917 - incorrect fprintf option in CHECK_COUNT static function r=froydnj

MozReview-Commit-ID: 5usb44okDrE